--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,8 @@
         <title>Hello! </title>
     </head>
     <body>
-        <h1>Welcome to my Webpage</h1>
+        <h1>Welcome to my Website</h1>
+        <h2>Hello!</h2>
         Hello, World everyone!
     </body>
 </html>
